# secure_fl

./: Experiment Result - updated.md  Untitled Diagram.drawio  fedAvg1.ipynb  flower-secure-aggregation
flower/flower-secure-aggregation/secaggexample/: attack.py  client_app.py  gradient_utils.py  noise.py  pyproject.toml  server_app.py  task.py  workflow_with_log.py
flower/flower-secure-aggregation/secaggexample/defence/: noise.py
