[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secaggexample"
version = "1.0.0"
description = "Secure Aggregation in Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.0.0",  # Changed to compatible version range
    "torchvision>=0.15.0",  # Changed to compatible version range
    "tensorflow-privacy>=0.8.6",  # Added for DP support
    "scikit-learn>=1.0.0"  # Added for anomaly detection
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "secaggexample.server_app:app"
clientapp = "secaggexample.client_app:app"


[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32
# Parameters for the SecAgg+ protocol
num-shares = 3
reconstruction-threshold = 2
max-weight = 9000
timeout = 15.0
# Demo flag
is-demo = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
